# leaf_gm_architecture

./: .gitignore  Leaf_gm_architecture_functions.py  README.md  gm_dataset_Knauer_et_al_2022_aggregated.parquet  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: Leaf_gm_architecture_functions.py  streamlit_app.py
src/leaf_gm_architecture/: functions.py  streamlit_app.py  streamlit_crosspred_global_pft.py  streamlit_crosspred_pft_pft.py  streamlit_crossval.py  streamlit_home.py  streamlit_utils.py
src/pages/: 2_cross_prediction_global-PFT.py
tests/: test_data_aggregation.py  test_example_runs.py
