[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leaf_gm_architecture"
version = "0.1.0"
description = "A Python package for analyzing plant functional types and traits."
authors = [
    { name = "Milad Rahimi Majd", email = "milad.rahimi.majd@uni-potsdam.de" }
]
maintainers = [
    { name = "Arne Neumann", email = "leaf_gm_architecture.programming@arne.cl" }
]

dependencies = [
    "pandas==1.5.3",
    "numpy==1.24.3",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "openpyxl==3.0.7",
    "streamlit==1.33.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
